# seashare

./: Cargo.toml  README.md  flake.nix
src/: error.rs  main.rs
src/endpoint/: mod.rs  raw.rs  seafile_token.rs  upload.rs
