[package]
name = "seashare"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "^0.4"
env_logger = "^0.9"
thiserror = "^1.0"

actix-web = "^4.0"
actix-multipart = "^0.4"

tokio = "^1.21"
tokio-stream = "^0.1"

serde_json = "^1.0"
toml = "^0.5"

[dependencies.futures-util]
version = "^0.3"
default-features = false
features = ["std"]

[dependencies.reqwest]
version = "^0.11"
features = ["multipart", "stream"]

[dependencies.uuid]
version = "^1.1"
features = ["v4"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]
